feat: add processInstanceKey to chunk record #31238